# dbt_showcase

./: .user.yml  Makefile  README.md  dbt_project.yml  profiles.yml  pyproject.toml
.devcontainer/: devcontainer.json
duckdb/: db
logs/: dbt.log.legacy
models/example/: features.sql  filter_columns.sql  join.sql  transform.sql
models/youtube/: features.sql  filter_columns.sql  join.sql  schema.yml  transform.sql
seeds/: content_owner_basic_a3.csv  content_owner_estimated_revenue_a1.csv
