[tool.poetry]
name = "dbt-duckdb-showcase"
version = "0.1.0"
description = ""
authors = ["Vincent Claes <vclaes1986@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-duckdb = "^1.3.1"
dbt-athena-adapter = "^1.0.1"
dbt-redshift = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"